Bump dependencies (#62)
* Bump dependencies

* Adjust build